# snapforge

./: .gitignore  CLEAN_ROOM.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/snapforge/: __main__.py  capture.py  editor.py  main.py  overlay.py
