[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapforge"
version = "0.1.0"
description = "Educational clean-room screenshot and annotation tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Educational Demo"}]
dependencies = ["PySide6>=6.7.0"]

[project.scripts]
snapforge = "snapforge.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
